--- a/index.html
+++ b/index.html
@@ -1,15 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project</title>
+  <title>pricing</title>
+
+
+  <!-- FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+
+
+  <!-- STYLES -->
   <link rel="stylesheet" href="style/normalize.css">
   <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
 
-<script src="js/main.js"></script>
+<body>
+  <main class="main-content">
+    <div class="page container">
+      <h1 class="page-title">Our pricing</h1>
+      <div style="margin-bottom: 64px;">Switch</div>
+      <section class="pricing">
+        <h2 class="visually-hidden">pricing</h2>
+        <div class="pricing-inner">
+          <section class="pricing-plan">
+            <h3 class="pricing-plan-title">Basic</h3>
+            <div class="pricing-plan-price">
+              <span class="pricing-plan-currency">$</span>
+              19.99
+            </div>
+            <ul class="pricing-plan-list">
+              <li class="pricing-plan-list-item">500 GB Storage</li>
+              <li class="pricing-plan-list-item">2 Users Allowed</li>
+              <li class="pricing-plan-list-item">Send up to 3 GB</li>
+            </ul>
+            <a class="button button-block button-primery" href="#">Learn more</a>
+          </section>
+          <section class="pricing-plan pricing-plan-best">
+            <h3 class="pricing-plan-title">Professional</h3>
+            <div class="pricing-plan-price">
+              <span class="pricing-plan-currency">$</span>
+              24.99
+            </div>
+            <ul class="pricing-plan-list">
+              <li class="pricing-plan-list-item">1 TB Storage</li>
+              <li class="pricing-plan-list-item">5 Users Allowed</li>
+              <li class="pricing-plan-list-item">Send up to 10 GB</li>
+            </ul>
+            <a class="button button-block button-white" href="#">Learn more</a>
+          </section>
+          <section class="pricing">
+            <h2 class="visually-hidden">pricing</h2>
+            <div class="pricing-inner">
+              <section class="pricing-plan">
+                <h3 class="pricing-plan-title">Master</h3>
+                <div class="pricing-plan-price">
+                  <span class="pricing-plan-currency">$</span>
+                  39.99
+                </div>
+                <ul class="pricing-plan-list">
+                  <li class="pricing-plan-list-item">2 TB Storage</li>
+                  <li class="pricing-plan-list-item">10 Users Allowed</li>
+                  <li class="pricing-plan-list-item">Send up to 20 GB</li>
+                </ul>
+                <a class="button button-block button-primery" href="#">Learn more</a>
+              </section>
+        </div>
+      </section>
+    </div>
+  </main>
+  <script src="js/main.js"></script>
 </body>
+
 </html>
