--- a/index.html
+++ b/index.html
@@ -23,7 +23,20 @@
   <main class="main-content">
     <div class="page container">
       <h1 class="page-title">Our pricing</h1>
-      <div style="margin-bottom: 64px;">Switch</div>
+<form class="pricing-switch" action="https://echo.htmlacademy.ru" method="GET">
+  <div class="switch">
+    <input class="switch-inpput-annual visually-hidden" type="radio" name="payment-period" value="annual" id="annual-payment-radio">
+    <input class="switch-inpput-monthly visually-hidden" type="radio" name="payment-period" value="monthly" id="monthly-payment-radio">
+    <label class="switch-label" for="annual-payment-radio">Annual</label>
+
+    <div class="switch-control">
+      <div class="switch-circle"></div>
+      <label class="switch-control-annual" for="annual-payment-radio"></label>
+      <label class="switch-control-monthly" for="monthly-payment-radio"></label>
+    </div>
+    <label class="switch-label" for="monthly-payment-radio">Monthly</label>
+  </div>
+</form>
       <section class="pricing">
         <h2 class="visually-hidden">pricing</h2>
         <div class="pricing-inner">
