--- a/index.html
+++ b/index.html
@@ -23,28 +23,30 @@
   <main class="main-content">
     <div class="page container">
       <h1 class="page-title">Our pricing</h1>
-<form class="pricing-switch" action="https://echo.htmlacademy.ru" method="GET">
-  <div class="switch">
-    <input class="switch-inpput-annual visually-hidden" type="radio" name="payment-period" value="annual" id="annual-payment-radio">
-    <input class="switch-inpput-monthly visually-hidden" type="radio" name="payment-period" value="monthly" id="monthly-payment-radio">
-    <label class="switch-label" for="annual-payment-radio">Annual</label>
+      <form class="pricing-switch" action="https://echo.htmlacademy.ru" method="GET">
+        <div class="switch">
+          <input class="switch-inpput-annual visually-hidden" type="radio" name="payment-period" value="annual"
+            id="annual-payment-radio">
+          <input class="switch-inpput-monthly visually-hidden" type="radio" name="payment-period" value="monthly"
+            id="monthly-payment-radio" checked>
+          <label class="switch-label" for="annual-payment-radio">Annual</label>
 
-    <div class="switch-control">
-      <div class="switch-circle"></div>
-      <label class="switch-control-annual" for="annual-payment-radio"></label>
-      <label class="switch-control-monthly" for="monthly-payment-radio"></label>
-    </div>
-    <label class="switch-label" for="monthly-payment-radio">Monthly</label>
-  </div>
-</form>
+          <div class="switch-control">
+            <div class="switch-circle"></div>
+            <label class="switch-control-annual" for="annual-payment-radio"></label>
+            <label class="switch-control-monthly" for="monthly-payment-radio"></label>
+          </div>
+          <label class="switch-label" for="monthly-payment-radio">Monthly</label>
+        </div>
+      </form>
       <section class="pricing">
         <h2 class="visually-hidden">pricing</h2>
         <div class="pricing-inner">
-          <section class="pricing-plan">
+          <section class="pricing-plan" data-payment-annual="199.99" data-payment-monthly="19.99">
             <h3 class="pricing-plan-title">Basic</h3>
             <div class="pricing-plan-price">
               <span class="pricing-plan-currency">$</span>
-              19.99
+              <span class="pricing-plan-value">19.99</span>
             </div>
             <ul class="pricing-plan-list">
               <li class="pricing-plan-list-item">500 GB Storage</li>
@@ -53,11 +55,11 @@
             </ul>
             <a class="button button-block button-primery" href="#">Learn more</a>
           </section>
-          <section class="pricing-plan pricing-plan-best">
+          <section class="pricing-plan pricing-plan-best" data-payment-annual="249.99" data-payment-monthly="24.99">
             <h3 class="pricing-plan-title">Professional</h3>
             <div class="pricing-plan-price">
               <span class="pricing-plan-currency">$</span>
-              24.99
+              <span class="pricing-plan-value"> 24.99</span>
             </div>
             <ul class="pricing-plan-list">
               <li class="pricing-plan-list-item">1 TB Storage</li>
@@ -66,11 +68,11 @@
             </ul>
             <a class="button button-block button-white" href="#">Learn more</a>
           </section>
-          <section class="pricing-plan">
+          <section class="pricing-plan" data-payment-annual="399.99" data-payment-monthly="99.99">
             <h3 class="pricing-plan-title">Master</h3>
             <div class="pricing-plan-price">
               <span class="pricing-plan-currency">$</span>
-              39.99
+              <span class="pricing-plan-value"> 39.99</span>
             </div>
             <ul class="pricing-plan-list">
               <li class="pricing-plan-list-item">2 TB Storage</li>
