Add Annual and Monthly words change annual and monthly

--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@
             id="annual-payment-radio">
           <input class="switch-inpput-monthly visually-hidden" type="radio" name="payment-period" value="monthly"
             id="monthly-payment-radio" checked>
-          <label class="switch-label" for="annual-payment-radio">Annual</label>
-
+          <label class="switch-label" for="annual-payment-radio">annual</label>
           <div class="switch-control">
             <div class="switch-circle"></div>
             <label class="switch-control-annual" for="annual-payment-radio"></label>
             <label class="switch-control-monthly" for="monthly-payment-radio"></label>
           </div>
-          <label class="switch-label" for="monthly-payment-radio">Monthly</label>
+          <label class="switch-label" for="monthly-payment-radio">monthly</label>
         </div>
       </form>
       <section class="pricing">
